# Testwork_typesense

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
migrations/: postgres_migrations.py  typesense_migrations.py
poetry_project/: pyproject.toml
project/: backend.py  config.py  main.py  postgres_utils.py  typesense_utils.py  utils.py
project/templates/: file_form.html  form.html  homepage.html  search_form.html
