[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["vlad <vlad.genyuk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.8.0"
flake8 = "^7.1.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
