[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["vlad <vlad.genyuk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.8.0"
flake8 = "^7.1.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
typesense = "^0.21.0"
lxml = "^5.2.2"
sqlalchemy = "^2.0.32"
gunicorn = "^22.0.0"
uvicorn = "^0.30.5"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
